RESOLVED FIXED134202
Catch Obj-C exceptions thrown by _linenPatternImage
https://bugs.webkit.org/show_bug.cgi?id=134202
Summary Catch Obj-C exceptions thrown by _linenPatternImage
Simon Fraser (smfr)
Reported 2014-06-23 11:45:53 PDT
Catch Obj-C exceptions thrown by _linenPatternImage
Attachments
Patch (1.95 KB, patch)
2014-06-23 11:46 PDT, Simon Fraser (smfr)
ggaren: review+
Simon Fraser (smfr)
Comment 1 2014-06-23 11:46:57 PDT
Geoffrey Garen
Comment 2 2014-06-23 11:58:18 PDT
Comment on attachment 233620 [details] Patch r=me An exception like this will likely leak memory and/or locks, causing extra memory use or deadlock. Is there a follow-up bug tracking the cause of the exception throw?
Simon Fraser (smfr)
Comment 3 2014-06-23 11:59:11 PDT
Yes, it's tracked by <rdar://problem/17222297>.
Simon Fraser (smfr)
Comment 4 2014-06-23 12:03:02 PDT
Note You need to log in before you can comment on or make changes to this bug.