Catch Obj-C exceptions thrown by _linenPatternImage https://bugs.webkit.org/show_bug.cgi?id=134202

Reviewed by Geoffrey Garen.

Catch Objective-C exceptions thrown by _linenPatternImage and
-[NSImage CGImageForProposedRect:context:hints:].

* platform/mac/ScrollbarThemeMac.mm:
(WebCore::linenBackgroundColor):

Canonical link: https://commits.webkit.org/152167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170308 268f45cc-cd09-0410-ab3c-d52691b4dbfc